--- a/_posts/2014-03-06-jekyll-setup-101.md
+++ b/_posts/2014-03-06-jekyll-setup-101.md
@@ -9,7 +9,7 @@ layout: post
 # Jekyll Blog Setup 101
 <h2 class="subtitle">From download to upload</h2>
 
-After a few too many Wordpress setups, I decided to give Jekyll a try. For the most part, everything was pretty straightforward, but I did hit a couple of snafoo's I hope to be able to carry you through.
+After a few too many Wordpress setups, I decided to give Jekyll a try. For the most part, everything was pretty straightforward, but I did hit a couple of snafus I hope to be able to carry you through.
 
 Before we start though, let me tell you a little bit about my setup so you will know if this is what you want to accomplish.
 * My blog is hosted on Github at finbox.github.io.
