--- a/_posts/2014-06-03-jekyll-setup-101.md
+++ b/_posts/2014-06-03-jekyll-setup-101.md
@@ -1,10 +1,11 @@
 ---
-title: Jekyll Blog Setup 101
+title: How to setup a Jekyll blog with Github
 permalink: /jekyll-blog-setup/ 
 layout: post
+image: http://jekyllrb.com/img/octojekyll.png
 ---
 
-<img src="http://jekyllrb.com/img/octojekyll.png" style="height:180px">
+<img src="{{ page.image }}" style="height:180px">
 
 # Jekyll Blog Setup 101
 <h2 class="subtitle">From download to upload</h2>
@@ -12,9 +13,10 @@ layout: post
 After a few too many Wordpress setups, I decided to give Jekyll a try. For the most part, everything was pretty straightforward, but I did hit a couple of snafus I hope to be able to carry you through.
 
 Before we start though, let me tell you a little bit about my setup so you will know if this is what you want to accomplish.
-* My blog is hosted on Github at finbox.github.io.
-* I have the subdomain blog.freelanceinbox.com pointed to that github page.
-* I test my blog in a local environment before I push it live.
+
+*    My blog is hosted on Github at finbox.github.io.
+*    I have the subdomain blog.freelanceinbox.com pointed to that github page.
+*    I test my blog in a local environment before I push it live.
 
 Alrighty, if you're still reading, I'm assuming you are interested in a similar setup.
 
@@ -60,10 +62,11 @@ If you look in your repository, you should notice that there is the "_site" fold
 We haven't actually written any Jekyll specific code though... so you won't see anything exciting. Let's change that. The following uses [Markdown](http://daringfireball.net/projects/markdown/) which is a language compiled by Jekyll, but you could also use [Textile](http://textile.sitemonks.com/).
 
 In the root folder of your repository create the following structure.
-* layouts 
-  * default.html 
-* posts
-  * 2014-3-06-first-post.md
+
+*   layouts 
+    *   default.html 
+*   posts
+    *   2014-3-06-first-post.md
 
 Inside of default.html paste the following:
 
@@ -81,19 +84,20 @@ Inside of default.html paste the following:
     </div>
     </body>
     </html>
+{:.language-markup}
 
 And inside of 2014-3-06-first-post.md paste the following:
-```
----
-title: First Post
-layout: post
----
-# My first post
-## Using Jekyll and Markdown
 
-Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.
+    ---
+    title: First Post
+    layout: post
+    ---
+    # My first post
+    ## Using Jekyll and Markdown
+    
+    Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.
+{:.language-markup}
 
-```
 And now let's test it! Go to the following URL:
 
     http://127.0.0.1:4000/2014/03/06/first-post.html
@@ -107,6 +111,8 @@ You should see a page similar to this:
 You now have a working Jekyll blog on your local environment. To get it live, all you have to do is push all of the code (exluding the "_site") file to your Github repository. After being pushed, Github will compile your Jekyll code and within a few seconds your updates should be live.  
 
 If the changes are not showing up, check your email. Github won't compile your code if you haven't verified your email. 
+
+---
 
 Congrats on having made it this far! To increase your knowledge of Jekyll and Markdown, I would recommend the following links:
 * [http://jekyllrb.com/docs/home/](http://jekyllrb.com/docs/home/)
