Cleaned up blog

--- a/_posts/2014-06-03-jekyll-setup-101.md
+++ b/_posts/2014-06-03-jekyll-setup-101.md
@@ -15,7 +15,7 @@ After a few too many Wordpress setups, I decided to give Jekyll a try. For the m
 Before we start though, let me tell you a little bit about my setup so you will know if this is what you want to accomplish.
 
 *    My blog is hosted on Github at finbox.github.io.
-*    I have the subdomain blog.freelanceinbox.com pointed to that github page.
+*    I have the subdomain blog.freelanceinbox.com pointing to that github page.
 *    I test my blog in a local environment before I push it live.
 
 Alrighty, if you're still reading, I'm assuming you are interested in a similar setup.
@@ -108,7 +108,7 @@ You should see a page similar to this:
 
 ## #Step 4 - Wrapping Up
 
-You now have a working Jekyll blog on your local environment. To get it live, all you have to do is push all of the code (exluding the "_site") file to your Github repository. After being pushed, Github will compile your Jekyll code and within a few seconds your updates should be live.  
+You now have a working Jekyll blog on your local environment. To get it live, all you have to do is push all of the code (excluding the "_site") file to your Github repository. After being pushed, Github will compile your Jekyll code and within a few seconds your updates should be live.  
 
 If the changes are not showing up, check your email. Github won't compile your code if you haven't verified your email. 
 
