Added standing out as a freelancer AND the freelance inbox way

--- a/_posts/2014-06-03-jekyll-setup-101.md
+++ b/_posts/2014-06-03-jekyll-setup-101.md
@@ -118,3 +118,5 @@ Congrats on having made it this far! To increase your knowledge of Jekyll and Ma
 * [http://jekyllrb.com/docs/home/](http://jekyllrb.com/docs/home/)
 * [http://daringfireball.net/projects/markdown/syntax](http://daringfireball.net/projects/markdown/syntax)
 * [https://github.com/finbox/finbox.github.io](https://github.com/finbox/finbox.github.io) (to verify folder structure)
+
+{% include kesler_bio.html %}
